Closed
Bug 445932
Opened 18 years ago
Closed 18 years ago
dirty rects are incorrectly offset from pixel boundaries
Categories
(Core :: Web Painting, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9.1a1
People
(Reporter: karlt, Assigned: karlt)
References
Details
Attachments
(1 file, 1 obsolete file)
|
6.73 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
Attachment 265747 [details] [diff] added a coordinate translation in nsViewManager::Refresh for views that are not aligned to their widgets, but the dirty region was not translated into the new coordinate system.
Attachment #330182 -
Flags: review?(roc)
| Assignee | ||
Comment 1•18 years ago
|
||
| Assignee | ||
Comment 2•18 years ago
|
||
Changed my comments and assertion that were a bit confused about the view coordinate origin and the view top-left.
Attachment #330182 -
Attachment is obsolete: true
Attachment #330357 -
Flags: review?(roc)
Attachment #330182 -
Flags: review?(roc)
Attachment #330357 -
Flags: superreview+
Attachment #330357 -
Flags: review?(roc)
Attachment #330357 -
Flags: review+
| Assignee | ||
Comment 3•18 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.1a1
Updated•8 years ago
|
Component: Layout: View Rendering → Layout: Web Painting
You need to log in
before you can comment on or make changes to this bug.
Description
•