Adjust the dirty region consistently with the coordinate transformation. b=445932 r+sr=roc